--- a/task2/package.json
+++ b/task2/package.json
@@ -5,6 +5,7 @@
     "eslint-plugin-import": "^2.16.0"
   },
   "dependencies": {
-    "koa": "^2.7.0"
+    "koa": "^2.7.0",
+    "koa-router": "^7.4.0"
   }
 }
