--- a/task5/package.json
+++ b/task5/package.json
@@ -9,6 +9,7 @@
     "koa": "^2.7.0",
     "koa-router": "^7.4.0",
     "redis": "^2.8.0",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4"
   }
 }
