--- a/mocha/package.json
+++ b/mocha/package.json
@@ -10,6 +10,8 @@
     "commander": "^2.19.0",
     "koa": "^2.7.0",
     "koa-router": "^7.4.0",
-    "redis": "^2.8.0"
+    "redis": "^2.8.0",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4"
   }
 }
