--- a/task6/package.json
+++ b/task6/package.json
@@ -5,11 +5,9 @@
 		"eslint-plugin-import": "^2.16.0"
 	},
 	"dependencies": {
-		"commander": "^2.19.0",
 		"ejs": "^2.6.1",
 		"koa": "^2.7.0",
 		"koa-router": "^7.4.0",
-		"koa-views": "^6.1.5",
-		"redis": "^2.8.0"
+		"koa-views": "^6.1.5"
 	}
 }
