--- a/task6/package.json
+++ b/task6/package.json
@@ -1,13 +1,15 @@
 {
-	"devDependencies": {
-		"eslint": "^5.15.1",
-		"eslint-config-airbnb-base": "^13.1.0",
-		"eslint-plugin-import": "^2.16.0"
-	},
-	"dependencies": {
-		"ejs": "^2.6.1",
-		"koa": "^2.7.0",
-		"koa-router": "^7.4.0",
-		"koa-views": "^6.1.5"
-	}
+  "devDependencies": {
+    "eslint": "^5.15.1",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.16.0"
+  },
+  "dependencies": {
+    "ejs": "^2.6.1",
+    "koa": "^2.7.0",
+    "koa-bodyparser": "^4.2.1",
+    "koa-router": "^7.4.0",
+    "koa-views": "^6.1.5",
+    "mongoose": "^5.4.20"
+  }
 }
