--- a/task6/package.json
+++ b/task6/package.json
@@ -8,6 +8,7 @@
     "ejs": "^2.6.1",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
+    "koa-qs": "^2.0.0",
     "koa-router": "^7.4.0",
     "koa-session": "^5.10.1",
     "koa-views": "^6.1.5",
